--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,94 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://lilyhe123.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = "ananke"
+title = "Lily's Blog"
+theme = 'typo'
 
 [caches]
   [caches.images]
     dir = ':cacheDir/images'
+
+# Google analytics code
+googleAnalytics = "G-xxxxxxxxx"
+
+[taxonomies]
+tag = 'tags'
+
+[params]
+# Meta description
+description = "A Tech Blog"
+showFooter = false
+footerContent = "Learn. Do. Teach."
+
+# Appearance settings
+theme = 'auto'
+colorPalette = 'default'
+hideHeader = false
+
+# Intro on main page, content is markdown
+homeIntroTitle = 'Hi, There!'
+homeIntroContent = """
+I am a Software Engineer. I enjoy learning new things and solving problems with my skills and knowledge.
+I'm intrested in various topics, distributed system, database, micrsoservice, AI etc.
+I created this website to share my thoughts and ideas along the journey.
+"""
+
+# Collection to display on home
+homeCollectionTitle = 'Posts'
+homeCollection = 'posts'
+
+# Lists parameters
+paginationSize = 100
+listSummaries = true
+listDateFormat = '2 Jan 2006'
+
+# Breadcrumbs
+[params.breadcrumbs]
+enabled = true
+showCurrentPage = true
+home = "Home"
+
+# Social icons
+[[params.social]]
+name = "linkedin"
+url = "#"
+
+[[params.social]]
+name = "medium"
+url = "#"
+
+[[params.social]]
+name = "github"
+url = "https://github.com/lilyhe123"
+
+# Main menu pages
+[[params.menu]]
+name = "home"
+url = "/"
+
+[[params.menu]]
+name = "posts"
+url = "/posts"
+
+[[params.menu]]
+name = "tags"
+url = "/tags"
+
+# Syntax highlight on code blocks
+[markup]
+[markup.highlight]
+style = 'algol'
+
+# Giscus comments
+[params.giscus]
+enable = false
+repo = "user/repo"
+repoid = "repoId"
+category = "General"
+categoryid = "categoryId"
+mapping = "pathname"
+theme = "preferred_color_scheme"
+
+[params.umami]
+enable = true
+websiteId = "6e51edef-988a-4c5a-b26f-cb4a33332d7c"
+jsLocation = "https://cloud.umami.is/script.js"
