--- a/config.yml
+++ b/config.yml
@@ -52,7 +52,7 @@ params:
   homeInfoParams:
     Title: "Tech, Tinker, Think"
     Content: |
-      I waht this blog to be part playground, part lab notebook, and part thought journal.
+      I want this blog to be part playground, part lab notebook, and part thought journal.
       I'll cover hands-on tinkering with tools and frameworks, deep dives into algorithms and architecture, and reflections on the evolving craft of engineering. 
   socialIcons:
     - name: github
