--- a/config.yml
+++ b/config.yml
@@ -42,6 +42,8 @@ params:
   showtoc: false
   tocopen: false
 
+  footer:
+    hideCopyright: true
   assets:
     favicon: "favicon.ico"
     favicon16x16: "favicon-16x16.png"
